deepview-rt-sys/deepview-rt.h


typedef enum {
    NN_SUCCESS = 0,
    NN_ERROR_INTERNAL,
    NN_ERROR_INVALID_HANDLE,
    NN_ERROR_OUT_OF_MEMORY,
    NN_ERROR_OUT_OF_RESOURCES,
    NN_ERROR_NOT_IMPLEMENTED,
    NN_ERROR_INVALID_PARAMETER,
    NN_ERROR_TYPE_MISMATCH,
    NN_ERROR_SHAPE_MISMATCH,
    NN_ERROR_INVALID_SHAPE,
    NN_ERROR_INVALID_ORDER,
    NN_ERROR_INVALID_AXIS,
    NN_ERROR_MISSING_RESOURCE,
    NN_ERROR_INVALID_ENGINE,
    NN_ERROR_TENSOR_NO_DATA,
    NN_ERROR_KERNEL_MISSING,
    NN_ERROR_TENSOR_TYPE_UNSUPPORTED,
    NN_ERROR_TOO_MANY_INPUTS,
    NN_ERROR_SYSTEM_ERROR,
    NN_ERROR_INVALID_LAYER,
    NN_ERROR_MODEL_INVALID,
    NN_ERROR_MODEL_MISSING,
    NN_ERROR_STRING_TOO_LARGE,
    NN_ERROR_INVALID_QUANT,
    NN_ERROR_MODEL_GRAPH_FAILED,
    NN_ERROR_GRAPH_VERIFY_FAILED,
} NNError;
typedef enum {
    NNTensorType_RAW = 0,
    NNTensorType_STR = 1,
    NNTensorType_I8 = 2,
    NNTensorType_U8 = 3,
    NNTensorType_I16 = 4,
    NNTensorType_U16 = 5,
    NNTensorType_I32 = 6,
    NNTensorType_U32 = 7,
    NNTensorType_I64 = 8,
    NNTensorType_U64 = 9,
    NNTensorType_F16 = 10,
    NNTensorType_F32 = 11,
    NNTensorType_F64 = 12
} NNTensorType;
typedef enum {
    NNQuantizationType_None = 0,
    NNQuantizationType_Affine_PerTensor = 1,
    NNQuantizationType_Affine_PerChannel = 2,
    NNQuantizationType_DFP = 3,
} NNQuantizationType;
typedef struct nn_tensor NNTensor;
typedef struct nn_quant_param NNQuantParam;
typedef struct nn_context NNContext;
NN_AVAILABLE_SINCE_2_0
NN_API
void*
nn_tensor_native_handle(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
void
nn_tensor_set_native_handle(NNTensor* tensor, void* handle);
typedef void(nn_aux_object_free)(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_assign(NNTensor*     tensor,
                 NNTensorType  type,
                 int32_t       n_dims,
                 const int32_t shape[NN_ARRAY_PARAM(n_dims)],
                 void*         data);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_view(NNTensor*     tensor,
               NNTensorType  type,
               int32_t       n_dims,
               const int32_t shape[NN_ARRAY_PARAM(n_dims)],
               NNTensor*     parent,
               int32_t       offset);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_alloc(NNTensor*     tensor,
                NNTensorType  type,
                int32_t       n_dims,
                const int32_t shape[NN_ARRAY_PARAM(n_dims)]);
NN_AVAILABLE_SINCE_2_0
NN_API
const int32_t*
nn_tensor_shape(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
const int32_t*
nn_tensor_strides(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int32_t
nn_tensor_dims(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
const void*
nn_tensor_mapro(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
void*
nn_tensor_maprw(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
void*
nn_tensor_mapwo(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_tensor_mapped(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
void
nn_tensor_unmap(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
NNTensorType
nn_tensor_type(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_4
NN_API
NNError
nn_tensor_set_type(NNTensor* tensor, NNTensorType type);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_tensor_element_size(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int32_t
nn_tensor_volume(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int32_t
nn_tensor_size(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_4
NN_API
char
nn_tensor_axis(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_tensor_zeros(const NNTensor* tensor, size_t* n_zeros);
NN_AVAILABLE_SINCE_2_4
NN_API
void
nn_tensor_set_zeros(NNTensor*      tensor,
                    size_t         n_zeros,
                    const int32_t* zeros,
                    int            own);
NN_AVAILABLE_SINCE_2_4
NN_API
void
nn_tensor_set_axis(NNTensor* tensor, int32_t axis);
NN_AVAILABLE_SINCE_2_4
NN_API
const float*
nn_tensor_scales(const NNTensor* tensor, size_t* n_scales);
NN_AVAILABLE_SINCE_2_4
NN_API
void
nn_tensor_quant_params(const NNTensor* tensor, NNQuantParam* quant_params);
NN_AVAILABLE_SINCE_2_4
NN_API
void
nn_tensor_set_scales(NNTensor*    tensor,
                     size_t       n_scales,
                     const float* scales,
                     int          own);
NN_AVAILABLE_SINCE_2_4_32
NN_API
NNQuantizationType
nn_tensor_quantization_type(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_DEPRECATED_SINCE_2_3
NN_API
bool
nn_tensor_shape_equal(const int32_t left[4], const int32_t right[4]);
NN_AVAILABLE_SINCE_2_0
NN_DEPRECATED_SINCE_2_3
NN_API
void
nn_tensor_shape_copy(int32_t dst[4], const int32_t src[4]);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_tensor_offset(const NNTensor* tensor,
                 int32_t         n_dims,
                 const int32_t   shape[NN_ARRAY_PARAM(n_dims)]);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_tensor_offsetv(const NNTensor* tensor, int32_t n_dims, ...);
typedef NNError(nn_user_ops)(NNContext*  context,
                             const char* opname,
                             size_t      index);