deepviewrt-sys/src/ffi.rs

extern "C" {
    #[doc = " Assigns the tensor parameters and optionally data pointer.  The default\n implementation uses the data buffer as the internal storage for tensor data\n and it MUST outlive the tensor.  For engine plugins they may choose how to\n use the data but for the OpenCL example if data is provided it will be copied\n into the OpenCL buffer then otherwise never used again.  If NULL is provided\n for data the OpenCL engine would create the memory and leave it unassigned.\n\n If using the default implementation and leaving data NULL then all operations\n which require data will fail.  The most dynamic tensor setup with optional\n data would be to call assign to setup the parameters with NULL data, then\n calling @ref nn_tensor_native_handle to see if one was created, if not the\n data buffer can be malloc'ed followed by a call to @ref\n nn_tensor_set_native_handle with this buffer.  One could also call\n nn_tensor_assign a second time with data set to the malloc'ed data.\n\n @param tensor Pointer to the given tensor object.\n @param type The data type that the tensor is storing (The type of the\n provided data).\n @param n_dims The number of dimensions in the provided tensor.\n @param shape The shape of the given tensor.\n @param data The new tensor data to be placed within the tensor provided.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_assign(
        tensor: *mut NNTensor,
        type_: NNTensorType,
        n_dims: i32,
        shape: *const i32,
        data: *mut ::std::os::raw::c_void,
    ) -> NNError;
}
extern "C" {
    #[doc = " Maps the tensor using the memory from the parent tensor.\n\n @param tensor Pointer to the tensor object where the view will be stored.\n @param type The data type that the tensor is storing.\n @param n_dims The number of dimensions in the provided tensor.\n @param shape The shape of the given tensor.\n @param parent Pointer to the tensor object that holds the original tensor.\n @param offset TO BE DETERMINED.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_view(
        tensor: *mut NNTensor,
        type_: NNTensorType,
        n_dims: i32,
        shape: *const i32,
        parent: *mut NNTensor,
        offset: i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " Allocates the internal memory for the tensor.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_alloc(
        tensor: *mut NNTensor,
        type_: NNTensorType,
        n_dims: i32,
        shape: *const i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " Returns the shape of the given tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_shape(tensor: *const NNTensor) -> *const i32;
}
extern "C" {
    #[doc = " Returns the strides of the given tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_strides(tensor: *const NNTensor) -> *const i32;
}
extern "C" {
    #[doc = " Returns the number of dimensions of the given tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_dims(tensor: *const NNTensor) -> i32;
}
extern "C" {
    #[doc = " Maps the tensor's memory and returns the client accessible pointer.  This is\n the read-only version which causes the engine to download buffers to the CPU\n memory space if required but will not flush back to the device on unmap.\n\n If the tensor is already mapped read-only or read-write a pointer is returned\n and the reference count increased, if it was already mapped write-only NULL\n is returned.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_mapro(tensor: *mut NNTensor) -> *const ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Maps the tensor's memory and returns the client accessible pointer.  This is\n the read-write version which causes the engine to download buffers to the CPU\n memory space if required and will also flush back to the device on unmap.\n\n If the tensor is already mapped read-only it needs to be unmapped before\n calling maprw otherwise NULL is returned.  A tensor already mapped as rw will\n simply increase the reference count.  A write-only mapped tensor will also\n return NULL.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_maprw(tensor: *mut NNTensor) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Maps the tensor's memory and returns the client accessible pointer.  This is\n the write-only version which will not cause a download of the buffers to the\n CPU memory space on map but will upload to the device on unmap.\n\n If the tensor is already mapped write-only or read-write a pointer is\n returned and the reference count increased.  If it was previously mapped as\n read-only NULL is returned.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_mapwo(tensor: *mut NNTensor) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Returns the tensor's mapping count, 0 means the tensor is unmapped.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_mapped(tensor: *const NNTensor) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Releases the tensor mapping, if the reference count reaches 0 it will be\n fully unmapped and will force the flush to the device, if required.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_unmap(tensor: *mut NNTensor);
}
extern "C" {
    #[doc = " Returns the type of a given tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_type(tensor: *const NNTensor) -> NNTensorType;
}
extern "C" {
    #[doc = " Sets the type of a given tensor object.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_set_type(tensor: *mut NNTensor, type_: NNTensorType) -> NNError;
}
extern "C" {
    #[doc = " Returns the element size of a given tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_element_size(tensor: *const NNTensor) -> usize;
}
extern "C" {
    #[doc = " Calculates the total tensor volume (product of dimensions).\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_volume(tensor: *const NNTensor) -> i32;
}
extern "C" {
    #[doc = " Calculates the total byte size of the tensor (volume * element_size).\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_size(tensor: *const NNTensor) -> i32;
}
extern "C" {
    #[doc = " Returns the natural data axis of the tensor.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_axis(tensor: *const NNTensor) -> ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the zero-points for the tensor and optionally the number of\n zero-points.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_zeros(tensor: *const NNTensor, n_zeros: *mut usize) -> *const i32;
}
extern "C" {
    #[doc = " Sets the quantization zero-points for the tensor.  If n_zeros>1 it should\n match the channel dimension (axis) of the tensor.\n\n If own=1 then the tensor will take ownership of the buffer and free it when\n the tensor is released.  Otherwise the buffer must outlive the tensor.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_set_zeros(
        tensor: *mut NNTensor,
        n_zeros: usize,
        zeros: *const i32,
        own: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Configures the channel axis of the tensor.  This refers to the \"C\" in\n orderings such as NHWC and NCHW.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_set_axis(tensor: *mut NNTensor, axis: i32);
}
extern "C" {
    #[doc = " Returns the scales array for the tensor and optionally the number of scales.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_scales(tensor: *const NNTensor, n_scales: *mut usize) -> *const f32;
}
extern "C" {
    #[doc = " Internal API used by the RTM loader to associate quantization parameters to\n the tensor.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_quant_params(tensor: *const NNTensor, quant_params: *mut NNQuantParam);
}
extern "C" {
    #[doc = " Sets the quantization scales for the tensor.  If n_scales>1 it should match\n the channel dimension (axis) of the tensor.\n\n If own=1 then the tensor will take ownership of the buffer and free it when\n the tensor is released.  Otherwise the buffer must outlive the tensor.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_set_scales(
        tensor: *mut NNTensor,
        n_scales: usize,
        scales: *const f32,
        own: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Returns the quantization type for the tensor.\n\n @note This API was missing before version 2.4.32 and instead the\n quantization format is inferred as affine when scales and zeros are provided\n and per-tensor vs. per-channel is inferred based on scales/zeros being 1 or\n greater than 1.\n\n @param tensor the tensor object used to query quantization type.\n\n @returns @ref NNQuantizationType_None for tensors which do not provide\n  quantization parameters.\n @returns @ref NNQuantizationType_Affine_PerTensor for tensors which provide\n  quantization parameters which map globally to the tensor.\n @returns @ref NNQuantizationType_Affine_PerChannel for tensors which provide\n  quantization parameters which map to each channel \"C\" of the tensor.\n @returns @ref NNQuantizationType_DFP for tensors which provide DFP\n  parameters.  Currently unsupported.\n\n @public @memberof NNTensor\n @since 2.4.32"]
    pub fn nn_tensor_quantization_type(tensor: *mut NNTensor) -> NNQuantizationType;
}
extern "C" {
    #[doc = " Tensor shape comparison.\n\n @returns true if both shapes are equal otherwise false.\n\n @since 2.0\n @deprecated 2.3"]
    pub fn nn_tensor_shape_equal(left: *const i32, right: *const i32) -> bool;
}
extern "C" {
    #[doc = " Copys the source shape array to the destination array.\n\n @since 2.0\n @deprecated 2.3"]
    pub fn nn_tensor_shape_copy(dst: *mut i32, src: *const i32);
}
extern "C" {
    #[doc = " Returns the offset of a given tensor.  This function can be used to calculate\n the index across numerous dimensions.\n\n @note Avoid using this function as part of inner loops as it requires a\n multiply and add for each dimenions.  Instead it can be used in an outer loop\n to get the starting index then increment this index in the inner loop,\n possibly using the tensor strides.\n\n @param tensor the tensor object used in the operation\n @param n_dims the number of dimensions provided in the @p shape\n @param shape the multi-dimensional index used to calculate the linear index\n\n @return the element index into the tensor based on the muliple dimenional\n indices provided.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_offset(
        tensor: *const NNTensor,
        n_dims: i32,
        shape: *const i32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the offset of a given tensor using variable length dimensions. This\n works the same as @ref nn_tensor_offset() but uses variable arguments. The\n user **must** provide @p n_dims number of parameters after the\n @p n_dims parameter.\n\n @param tensor the tensor object used in the operation\n @param n_dims the number of dimensions to use when calculating the index\n @param … variable number of shape elements which **must** be of type int32_t\n\n @return the element index into the tensor based on the muliple dimenional\n indices provided.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_offsetv(tensor: *const NNTensor, n_dims: i32, ...) -> ::std::os::raw::c_int;
}
